--- a/backlogger/lib/backlogger_web/templates/layout/root.html.heex
+++ b/backlogger/lib/backlogger_web/templates/layout/root.html.heex
@@ -14,10 +14,10 @@
       <section class="container">
         <nav>
           <ul>
-            <%# <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li> %>
-            <%# <%= if function_exported?(Routes, :live_dashboard_path, 2) do %1> %>
-            <%#   <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %1></li> %>
-            <%# <% end %1> %>
+            <li><%= link "Entries", to: Routes.entry_path(@conn, :index) %></li>
+            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
+              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
+            <% end %>
           </ul>
         </nav>
         <a href="/" class="phx-logo">
